Bug 42260 - CPU 100% on switched off AutoCalculate with Conditional Formatting on date values
Summary: CPU 100% on switched off AutoCalculate with Conditional Formatting on date va...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: All All
: medium major
Assignee: Not Assigned
URL:
Whiteboard: target:4.0.0
Keywords:
Depends on:
Blocks:
 
Reported: 2011-10-26 00:30 UTC by Zdenko Turcan
Modified: 2013-09-15 08:57 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments
reproduced problem in sample file (10.19 KB, application/vnd.oasis.opendocument.spreadsheet)
2011-10-26 00:30 UTC, Zdenko Turcan
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Zdenko Turcan 2011-10-26 00:30:02 UTC
Created attachment 52779 [details]
reproduced problem in sample file

Problem description: When spreadsheet on foreground with switched off AutoCalculate + there are some cells with Conditional Formatting and date values, very high CPU load can be seen everlasting.

For simplicity I've created simple scenario (in reality I have complex document and conditional formatting is only in the first column).

Steps to reproduce:
1. Create new Calc / Spreadsheet document
2. set A1 =TODAY()
3. set B1 .. K1 = A1+1 .. J1+1
4. copy row 1 to rows 2 ..40
5. set on this (A1..K40) cells the conditional formatting:
  [x] Condition 1: Cell value is equal to TODAY()
6. set Tools / Cell Content / [ ] AutoCalculate

Current behavior: very high CPU load: 30-100% without any user input

Expected behavior: minimal CPU load (0-1%)

Platform (if different from the browser): probably on all platforms (at least on linux and windows). this bug is also in older versions (at least 2 years ago)
Comment 1 Winfried Donkers 2011-10-26 02:55:44 UTC
I confirm this behaviour with version 3.4.3 on a Windows platform.

Re-enabling the autocalculate brings back the processor load to minimal.
Comment 2 Florian Reisinger 2012-02-26 09:12:59 UTC
Because of confimation of Winfried
Comment 3 Florian Reisinger 2012-02-26 09:14:14 UTC
(In reply to comment #2)
> Because of confimation of Winfried
Sorry confi_r_mation
Comment 4 Not Assigned 2012-11-24 15:55:56 UTC
Markus Mohrhard committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=b0ff8deb1130335537df5543da6b4b6eadfe2e99

prevent 100% cpu on switched of autocalc with volatile func, fdo#42260



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.