prevent 100% cpu on switched of autocalc with volatile func, fdo#42260

Actually conditional formats with sitched off autocalc are not working
correctly but this patch does not make it worse

Change-Id: I44a4450fb7845e5cb2d9b2ac605540722a5bd48e