sc/source/core/data/conditio.cxx
@@ -665,7 +665,7 @@ void ScConditionEntry::Interpret( const ScAddress& rPos )
         if (!pEff1->IsRunning())        // keine 522 erzeugen
         {
             //! Changed statt Dirty abfragen !!!
-            if (pEff1->GetDirty() && !bRelRef1)
+            if (pEff1->GetDirty() && mpDoc->GetAutoCalc() && !bRelRef1)
                 bDirty = true;
             if (pEff1->IsValue())
             {
@@ -694,7 +694,7 @@ void ScConditionEntry::Interpret( const ScAddress& rPos )
     {
         if (!pEff2->IsRunning())        // keine 522 erzeugen
         {
-            if (pEff2->GetDirty() && !bRelRef2)
+            if (pEff2->GetDirty() && mpDoc->GetAutoCalc() && !bRelRef2)
                 bDirty = true;
             if (pEff2->IsValue())
             {
